fix: make TOC rendering consistent regardless of the page content (#1189)
Sets `flex-wrap: nowrap` to allow for "overflowing" TOC when too wide. 

Swizzles the `TOCItems` component into `@apify/docs-theme`. Uses a
[hack](https://stackoverflow.com/questions/556153/inline-elements-shifting-when-made-bold-on-hover)
with `::before` pseudoclass to reserve space for the bold TOC items, so
the element width doesn't change on selection.

Closes #1188

--- a/src/theme/DocItem/Layout/styles.module.css
+++ b/src/theme/DocItem/Layout/styles.module.css
@@ -22,3 +22,7 @@
     max-width: 820px !important;
   }
 }
+
+.row {
+  flex-wrap: nowrap;
+}
